--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -1,3 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+a {
+	-webkit-tap-highlight-color: transparent;
+}
