--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -2,6 +2,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-a {
+a,
+button {
 	-webkit-tap-highlight-color: transparent;
 }
