--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -2,7 +2,15 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-a,
-button {
+a:focus,
+a:active,
+button:focus,
+button:active {
 	-webkit-tap-highlight-color: transparent;
+	outline: none;
+}
+
+input,
+textarea {
+	outline: none;
 }
