--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -18928,9 +18928,17 @@ video {
   transition-delay: 1000ms;
 }
 
-a,
-button {
+a:focus,
+a:active,
+button:focus,
+button:active {
   -webkit-tap-highlight-color: transparent;
+  outline: none;
+}
+
+input,
+textarea {
+  outline: none;
 }
 
 @media (min-width: 640px) {
